<resources>
    <string name="app_name">Dynodash</string>
    <string name="app_caption">Ordering Made Easy</string>

    <!--  Titles  -->
    <string name="login_title">Sign In</string>
    <string name="register_title">Sign Up</string>
    <string name="logout_title">Sign Out</string>

    <!--  Text Field Resources  -->
    <string name="login_username_placeholder">Username</string>
    <string name="login_password_placeholder">Password</string>
    <string name="register_email_placeholder">Email</string>
    <string name="register_name_placeholder">Name</string>
    <string name="restaurant_name_placeholder">Restaurant Name</string>
    <string name="restaurant_description_placeholder">Description</string>
    <string name="restaurant_address_placeholder">Address</string>

    <!--  General Values  -->
    <string name="login_to_register_text">New? Create an account</string>
    <string name="register_to_login_text">Already have an account?</string>

    <!--  Icon Values  -->
    <string name="nav_tables_title">Tables</string>
    <string name="nav_menu_title">Menu</string>
    <string name="nav_orders_title">Orders</string>
    <string name="nav_codes_title">Scan</string>
    <string name="title_activity_help_web_view">HelpWebView</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--  Helper Text Values  -->
    <string name="helper_1">Customer Login: eee1@gmail.com, eee123</string>
    <string name="helper_2">Restaurant Login: eee2@gmail.com, eee123</string>

    <!--  Error Text Values  -->
    <string name="error_primary">Whoops!</string>
    <string name="error_secondary">Please Connect to WiFi</string>
    <string name="error_retry_button">Retry</string>
</resources>