<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/login_page_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="48dp"
                app:fontFamily="@font/poppins_extrabold" />

            <TextView
                android:id="@+id/login_page_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/app_caption"
                android:textAlignment="center"
                android:textSize="25dp"
                app:fontFamily="@font/poppins_medium" />

            <TextView
                android:id="@+id/login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/login_title"
                android:textAlignment="center"
                android:textSize="20dp"
                app:fontFamily="@font/poppins_medium" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/login_username_placeholder">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/login_password_placeholder"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:text="@string/login_title" />

            <Button
                android:id="@+id/linkToRegisterFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:layout_marginTop="30dp"
                android:background="@color/teal_700"
                app:backgroundTint="@color/teal_700"
                android:text="@string/login_to_register_text"/>

            <Button
                android:id="@+id/webViewHelpTrigger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:layout_marginTop="30dp"
                android:background="@color/error_red"
                app:backgroundTint="@color/error_red"
                android:text="Web View Help"/>

            <!--        Error Handler       -->
            <TextView
                android:id="@+id/errorMessageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:textColor="@color/teal_200"
                android:textSize="34sp"
                android:visibility="invisible" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>